# learn-modern-cpp

./: LICENSE  README.md
solutions/: .clangd  CMakeLists.txt  README.md
solutions/cmake/: CompilerWarnings.cmake  FetchCatch2.cmake  Sanitizers.cmake
solutions/phase1_tooling/: CMakeLists.txt
solutions/phase1_tooling/ex1_hello_world/: README.md  hello.cpp
solutions/phase1_tooling/ex2_two_file_project/: CMakeLists.txt  greet.cpp  greet.h  main.cpp
solutions/phase1_tooling/ex3_catch2/: CMakeLists.txt  math_utils.cpp  math_utils.h  test_math_utils.cpp
solutions/phase2_foundations/: CMakeLists.txt
solutions/phase2_foundations/ex1_compilation_stages/: build_stages.sh  main.cpp  util.cpp  util.h
solutions/phase2_foundations/ex2_odr_violation/broken/: CMakeLists.txt  a.cpp  b.cpp  main.cpp
solutions/phase2_foundations/ex2_odr_violation/fixed/: CMakeLists.txt  a.cpp  b.cpp  helper.cpp  helper.h  main.cpp
solutions/phase2_foundations/ex3_rpn_calculator/: CMakeLists.txt  main.cpp  rpn.cpp  rpn.h  test_rpn.cpp
solutions/phase3_oop/: CMakeLists.txt
solutions/phase3_oop/ex1_raii_filehandle/: CMakeLists.txt  file_handle.cpp  file_handle.h  main.cpp  test_file_handle.cpp
solutions/phase3_oop/ex2_rule_of_five/: CMakeLists.txt  buffer.cpp  buffer.h  main.cpp
solutions/phase3_oop/ex3_copy_and_swap/: CMakeLists.txt  buffer.cpp  buffer.h  test_copy_swap.cpp
solutions/phase3_oop/ex4_matrix_operators/: CMakeLists.txt  matrix.cpp  matrix.h  test_matrix.cpp
solutions/phase4_stl/: CMakeLists.txt
solutions/phase4_stl/ex1_container_benchmark/: CMakeLists.txt  bench.cpp
solutions/phase4_stl/ex2_custom_iterator/: CMakeLists.txt  linked_list.h  test_iterator.cpp
solutions/phase4_stl/ex3_phonebook/: CMakeLists.txt  phonebook.cpp  phonebook.h  test_phonebook.cpp
solutions/phase4_stl/ex4_histogram/: CMakeLists.txt  histogram.cpp  test_histogram.cpp
solutions/phase5_templates/: CMakeLists.txt
solutions/phase5_templates/ex1_clamp/: CMakeLists.txt  clamp.h  test_clamp.cpp
solutions/phase5_templates/ex2_typed_stack/: CMakeLists.txt  test_typed_stack.cpp  typed_stack.h
solutions/phase5_templates/ex3_variadic_print/: CMakeLists.txt  print.h  test_print.cpp
solutions/phase5_templates/ex4_constexpr_fibonacci/: CMakeLists.txt  fibonacci.h  test_fibonacci.cpp
solutions/phase5_templates/ex5_if_constexpr_process/: CMakeLists.txt  process.h  test_process.cpp
solutions/phase6_modern_cpp/: CMakeLists.txt
solutions/phase6_modern_cpp/ex1_smart_pointers/: CMakeLists.txt  animal.h
solutions/phase6_modern_cpp/ex1_smart_pointers/raw_version/: main_raw.cpp
solutions/phase6_modern_cpp/ex1_smart_pointers/smart_version/: main_smart.cpp
solutions/phase6_modern_cpp/ex2_move_semantics/: CMakeLists.txt  buffer.cpp  buffer.h  test_move.cpp
solutions/phase6_modern_cpp/ex3_lambda_adder/: CMakeLists.txt  adder.h  test_adder.cpp
solutions/phase6_modern_cpp/ex4_perfect_forwarding/: CMakeLists.txt  invoke.h  test_invoke.cpp
solutions/phase7_advanced/: CMakeLists.txt
solutions/phase7_advanced/ex1_concepts/: CMakeLists.txt  arithmetic_concept.h  statistics.h  test_concepts.cpp
solutions/phase7_advanced/ex2_ranges_pipeline/: CMakeLists.txt  pipeline.h  test_pipeline.cpp
solutions/phase7_advanced/ex3_coroutine_generator/: CMakeLists.txt  fibonacci_gen.h  generator.h  test_generator.cpp
solutions/phase7_advanced/ex4_modules/: CMakeLists.txt  README.md  main.cpp  myutil.cppm
solutions/phase7_advanced/ex5_parallel_transform/: CMakeLists.txt  parallel_bench.cpp
solutions/phase8_professional/: CMakeLists.txt
solutions/phase8_professional/ex1_use_after_free/: CMakeLists.txt
solutions/phase8_professional/ex1_use_after_free/buggy/: gdb_session.txt  main.cpp
solutions/phase8_professional/ex1_use_after_free/fixed/: main.cpp
solutions/phase8_professional/ex2_clang_tidy/: .clang-tidy  CMakeLists.txt
solutions/phase8_professional/ex2_clang_tidy/after/: modern_code.cpp
solutions/phase8_professional/ex2_clang_tidy/before/: legacy_code.cpp
solutions/phase8_professional/ex3_matrix_profile/: CMakeLists.txt  bench.cpp
solutions/phase8_professional/ex3_matrix_profile/naive/: matmul.cpp
solutions/phase8_professional/ex3_matrix_profile/optimized/: matmul.cpp
solutions/phase8_professional/ex4_producer_consumer/: CMakeLists.txt  bounded_queue.h  test_producer_consumer.cpp
solutions/phase8_professional/ex5_github_actions/: ci.yml
